// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expect <Submit> to render 1`] = `
<Submit
  onChange={[Function]}
  value="This is text"
>
  <Submit__Input
    type="submit"
    value="This is text"
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Submit__Input-sc-1h1p8pz-0",
            "isStatic": true,
            "lastClassName": "kMJEtZ",
            "rules": Array [
              "
  min-width: 200px;
  width: 100%;
  height: 80px;
  border: 0;
  padding: 24px 16px 24px 24px;
  outline: none;
  background-color: ",
              "#33cccc",
              ";
  color: ",
              "#fff",
              ";

  &:hover:not(.btn-default):not(.btn-loading):not([disabled]) {
    background-color: #43e4e4;
  }
  &:active:not(.btn-default):not(.btn-loading):not([disabled]) {
    background-color: #2fbcbc;
  }

  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  letter-spacing: normal;

  &:disabled {
    background-color: ",
              "#cfdae1",
              ";
    &,
    & * {
      cursor: not-allowed;
    }
  }
",
            ],
          },
          "displayName": "Submit__Input",
          "render": [Function],
          "styledComponentId": "Submit__Input-sc-1h1p8pz-0",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="submit"
      value="This is text"
    >
      <input
        className="Submit__Input-sc-1h1p8pz-0 kMJEtZ"
        type="submit"
        value="This is text"
      />
    </StyledComponent>
  </Submit__Input>
</Submit>
`;

exports[`Expect <Submit> to render properly with empty 1`] = `
<Submit
  onChange={[Function]}
  value=""
>
  <Submit__Input
    type="submit"
    value=""
  >
    <StyledComponent
      forwardedClass={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "attrs": undefined,
          "componentStyle": ComponentStyle {
            "componentId": "Submit__Input-sc-1h1p8pz-0",
            "isStatic": true,
            "lastClassName": "kMJEtZ",
            "rules": Array [
              "
  min-width: 200px;
  width: 100%;
  height: 80px;
  border: 0;
  padding: 24px 16px 24px 24px;
  outline: none;
  background-color: ",
              "#33cccc",
              ";
  color: ",
              "#fff",
              ";

  &:hover:not(.btn-default):not(.btn-loading):not([disabled]) {
    background-color: #43e4e4;
  }
  &:active:not(.btn-default):not(.btn-loading):not([disabled]) {
    background-color: #2fbcbc;
  }

  font-size: 14px;
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
  letter-spacing: normal;

  &:disabled {
    background-color: ",
              "#cfdae1",
              ";
    &,
    & * {
      cursor: not-allowed;
    }
  }
",
            ],
          },
          "displayName": "Submit__Input",
          "render": [Function],
          "styledComponentId": "Submit__Input-sc-1h1p8pz-0",
          "target": "input",
          "toString": [Function],
          "warnTooManyClasses": [Function],
          "withComponent": [Function],
        }
      }
      forwardedRef={null}
      type="submit"
      value=""
    >
      <input
        className="Submit__Input-sc-1h1p8pz-0 kMJEtZ"
        type="submit"
        value=""
      />
    </StyledComponent>
  </Submit__Input>
</Submit>
`;
